# govscout

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum
.githooks/: pre-commit
cmd/govscout/: main.go
docker/: Dockerfile.backend  Dockerfile.frontend
docs/: deploy.md
internal/alerts/: email.go  email_test.go  matcher.go  matcher_test.go
internal/db/: alerts.go  alerts_test.go  db.go  filters.go  opportunities.go  opportunities_test.go  searches.go  sync.go  users.go
internal/db/migrations/: 001_initial.sql  002_email_alerts.sql  003_search_response_deadline.sql  004_delivery_unique.sql  005_delivery_status.sql
internal/samgov/: client.go  client_retry_test.go  client_test.go  retry.go  retry_test.go  testhelpers.go  types.go
internal/sync/: resilience_test.go  sync.go  sync_test.go
internal/web/: auth.go  auth_test.go  handlers.go  labels.go  server.go  templates.go
internal/web/static/: style.css
internal/web/templates/: layout.html  (+3 more)
src/: api.rs  db.rs  display.rs  lib.rs  main.rs  server.rs  sync.rs
systemd/: govscout-sync.service  govscout-sync.timer  govscout.service
web/: CLAUDE.md  next.config.ts  package.json  proxy.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: download-all-button.tsx  filter-preset-bar.tsx  logout-button.tsx  navbar.tsx  opportunity-card.tsx  opportunity-detail.tsx  pagination.tsx  search-filters.tsx
web/lib/: api.ts  auth.ts  naics-labels.ts  presets.ts  types.ts
(+15 files in other folders)
